packages/typ/tests/fixtures/diagnostics/0998_mli_binary_type_underapplied_10.mli
type ('a, 'b) pair_kappa
val x_kappa : int pair_kappa
